--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ $RECYCLE.BIN/
 # =========================
 # Operating System Files
 # =========================
+.vs
+*.dll
+*\bin
+*\obj
+*\packages
